[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades, with MagicBlock Ephemeral Rollup integration"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.4.2"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }
solana-program = "=2.2"
borsh = "=0.10"
bytemuck = { version = "1.7.2", features = ["derive"] }
lib-sokoban = "=0.3.0"
num_enum = "=0.5.11"
itertools = "=0.10.5"
thiserror = "1.0.66"
solana-security-txt = "1.1.0"
static_assertions = "=1.1.0"
solana-invoke = "0.4.0"

# MagicBlock Ephemeral Rollup integration — same exact versions Manifest pins.
ephemeral-rollups-sdk = { version = "=0.10.3", default-features = false, features = ["solana-program", "solana-system-interface"] }
magicblock-magic-program-api = { version = "0.8.5", default-features = false }
magicblock-delegation-program-api = { version = "=0.1.1", default-features = false }
solana-instruction = "3"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.28.0", features = ["full"] }
solana-program-test = "2.2"
solana-logger = "2.2"
solana-sdk = "2.2"
