[package]
name = "perp-router"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "Apache-2.0"
description = "Perpetual futures router on Phoenix CLOB with MagicBlock ER and Percolator risk engine"

[lib]
crate-type = ["cdylib", "lib"]
name = "perp_router"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
solana-program = "=2.2"
solana-invoke = "0.4.0"
solana-instruction = "3"

phoenix = { path = "../phoenix-v1", package = "phoenix-v1", default-features = false, features = ["cpi"] }

ephemeral-rollups-sdk = { version = "=0.10.3", default-features = false, features = ["solana-program", "solana-system-interface"] }
magicblock-magic-program-api = { version = "0.8.5", default-features = false }
magicblock-delegation-program-api = { version = "=0.1.1", default-features = false }

bincode = "1.3"
sha2 = "0.10"

# Oracle (re-add in Phase 4 — kept out for now to avoid resolver conflicts
# with ephemeral-rollups-sdk's solana-instruction version):
# pyth-solana-receiver-sdk = "0.3"

spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }

borsh = "=0.10"
bytemuck = { version = "1.7.2", features = ["derive"] }
lib-sokoban = "=0.3.0"

num_enum = "=0.5.11"
thiserror = "1.0.66"
static_assertions = "=1.1.0"
solana-security-txt = "1.1.0"
shank = "0.4.2"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.28.0", features = ["full"] }
solana-program-test = "2.2"
solana-logger = "2.2"
solana-sdk = "2.2"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true
